k8s/frontend-deployment.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: frontend
#   namespace: quiz-connect
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: frontend
#   template:
#     metadata:
#       labels:
#         app: frontend
#     spec:
#       containers:
#         - name: frontend
#           image: delph152/quiz-connect-frontend:latest
#           ports:
#             - containerPort: 80
#           volumeMounts:                  # <-- ici, à l'intérieur du container
#             - name: config-volume
#               mountPath: /usr/share/nginx/html/config.json
#               subPath: config.json
#       volumes:                          # <-- ici, à l'intérieur du pod spec
#         - name: config-volume
#           configMap:
#             name: frontend-config
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: quiz-connect
spec:
  replicas: 2 # On passe à 2 pour la Haute Disponibilité sur tes 3 nœuds
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      # Optionnel : Force les 2 répliques à ne pas être sur le même serveur B2-7
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - frontend
              topologyKey: "kubernetes.io/hostname"
      tolerations:
        - key: "node.cloudprovider.kubernetes.io/uninitialized"
          operator: "Equal"
          value: "true"
          effect: "NoSchedule"
      containers:
        - name: frontend
          image: nginx:stable-alpine
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          resources: # Gestion intelligente des ressources B2-7
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          volumeMounts:
            - name: config-volume
              mountPath: /usr/share/nginx/html/config.json
              subPath: config.json
            - name: config-volume
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html
      volumes:
        - name: config-volume
          configMap:
            name: frontend-config
