k8s/backend-service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: backend
#   namespace: quiz-connect
# spec:
#   type: NodePort
#   ports:
#     - port: 5000
#       targetPort: 5000
#       nodePort: 30500
#   selector:
#     app: backend
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: quiz-connect
  labels:
    app: backend
    tier: backend
spec:
  type: ClusterIP

  selector:
    app: backend

  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
