k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: quiz-connect
  annotations:
    # Optionnel : On peut demander à OVH de nommer le LoadBalancer
    service.beta.kubernetes.io/ovh-loadbalancer-proxy-protocol: "false"
spec:
  type: LoadBalancer # Déclenche l'attribution d'une IP publique par OVH
  ports:
    - port: 80        # Port exposé sur Internet (standard HTTP)
      targetPort: 80  # Port interne de ton conteneur Nginx
      protocol: TCP
  selector:
    app: frontend
