k8s/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: quiz-connect-ingress
#   namespace: quiz-connect
# spec:
#   ingressClassName: nginx
#   rules:
#     - host: quiz.local
#       http:
#         paths:
#           - path: /api
#             pathType: Prefix
#             backend:
#               service:
#                 name: backend
#                 port:
#                   number: 5000
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: frontend
#                 port:
#                   number: 80
#           - path: /phpmyadmin
#             pathType: Prefix
#             backend:
#               service:
#                 name: phpmyadmin
#                 port:
#                   number: 80
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quiz-connect-ingress
  namespace: quiz-connect
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "8m"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 5000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
